--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,11 +1,8 @@
 - @title = 'TOP'
-.uk-block.uk-block-secondary.uk-contrast.uk-block-large
+.uk-block.uk-block-secondary.uk-contrast.uk-block-large.top
   .uk-container
-    h1 Welcome to DarkNess
-    .uk-grid.uk-grid-match data-uk-grid-margin=""
-      .uk-width-medium-1-3 hoge
-      .uk-width-medium-1-3 hoge
-      .uk-width-medium-1-3 hoge
-      br
-      .uk-width-medium-1-3
-      .uk-width-medium-1-3 align="center" = link_to '登録', '#', class: 'uk-button-primary uk-button-large'
+    .uk-grid.uk-grid-match.center data-uk-grid-margin=""
+      .uk-width-large-1-1
+        h1.center Welcome to DarkNess
+      .uk-width-large-1-2
+      .uk-width-large-1-2 align="center" = link_to 'Sign up', '#', class: 'uk-button-primary uk-button-large'
