[edit] uploadページの作成

--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -18,6 +18,9 @@
 .right
   text-align: right
 
+.left
+  text-align: left
+
 mark
   color: #e28327
   background: transparent
@@ -81,13 +84,17 @@ html, body
   .uk-container
     box-sizing: border-box
     width: 100%
+#upload-drop
+  i
+    font-family: 'FontAwesome'
 
 .footer
   background: rgb(88, 88, 88)
-  height: 14%
+  height: 18%
   position: absolute
   width: 100%
-  top: 86%
+  min-width: 110px
+  top: 82%
   .uk-container
     margin-top: 30px
     font-size: 14px
@@ -96,3 +103,9 @@ html, body
       margin-top: 15px
 .top
   width: 100%
+
+h1#page-title
+  margin-top: 30px
+  border-bottom: 1px solid rgb(244, 244, 244)
+  text-align: left
+  color: white
