[modify] indexのデザイン調整

--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -2,7 +2,8 @@
 .uk-block.uk-block-secondary.uk-contrast.uk-block-large.top
   .uk-container
     .uk-grid.uk-grid-match.center data-uk-grid-margin=""
-      .uk-width-large-1-1
-        h1.center Welcome to DarkNess
+      .uk-width-large-1-2.center
+      .uk-width-large-1-2.center
+        = image_tag('logo.png')
       .uk-width-large-1-2
       .uk-width-large-1-2 align="center" = link_to 'Sign up', '#', class: 'uk-button-primary uk-button-large'
