--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -84,6 +84,23 @@ html, body
   .uk-container
     box-sizing: border-box
     width: 100%
+    img
+      width: 400px
+      height: 165px
+      display: block
+      margin-left: auto
+      margin-right: auto
+
+nav
+  .uk-navbar-brand
+    margin-right: 20px
+  .uk-navbar-nav
+    li.normal-nav
+      border-left: 1px solid gray
+      &.last-child
+        border-right: 1px solid gray
+
+
 #upload-drop
   i
     font-family: 'FontAwesome'
@@ -93,7 +110,7 @@ html, body
   height: 18%
   position: absolute
   width: 100%
-  min-width: 110px
+  min-height: 150px
   top: 82%
   .uk-container
     margin-top: 30px
