--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,15 +18,21 @@ body
         span.brand.bold DarkNess
 
       ul.uk-navbar-nav.uk-hidden-small
-        li
+        li.normal-nav
           = link_to '#'
-            = fa_icon 'user-md', text: ''
+            = fa_icon 'cloud-upload', text: 'Upload'
+        li.normal-nav
+          = link_to '#'
+            = fa_icon 'smile-o', text: 'Events'
+        li.normal-nav.last-child
+          = link_to '#'
+            = fa_icon 'book', text: 'Albums'
 
       .uk-navbar-flip.uk-hidden-small
         ul.uk-navbar-nav
           li
             = link_to '#'
-              = fa_icon 'sign-in', text: 'ログイン'
+              = fa_icon 'sign-in', text: 'Sign In'
 
   == yield
 
@@ -41,7 +47,14 @@ body
             = link_to 'https://github.com/SLP-KBIT/Attereco-Front/blob/master/LICENSE.txt'
               = fa_icon 'sticky-note', text: 'License'
             br
-            p = 'Copyright (c) MaxMellon'
+            = mail_to 'mozi_kke@excite.co.jp'
+              = fa_icon 'envelope', text: 'E-mail'
+        .uk-width-small-2-3
+          .uk-panel
+        .uk-width-medium-1-2
+          p.left  = 'Powered by Ruby on Rails / Theme by UIkit'
+        .uk-width-medium-1-2
+          p.right = 'Copyright (c) MaxMellon'
 
 - if notice
   javascript:
