[modify] デザイン調整

--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -7,3 +7,5 @@
         = image_tag('logo.png')
       .uk-width-large-1-2
       .uk-width-large-1-2 align="center" = link_to 'Sign up', '#', class: 'uk-button-primary uk-button-large'
+      .uk-width-large-1-2
+      .uk-width-large-1-2 align="center" = link_to 'Sign in', '#', class: 'uk-button uk-button-large'
