--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -92,6 +92,7 @@ html, body
       margin-right: auto
 
 nav
+  margin-bottom: 20px
   .uk-navbar-brand
     margin-right: 20px
   .uk-navbar-nav
@@ -100,10 +101,25 @@ nav
       &.last-child
         border-right: 1px solid gray
 
+.uk-block.uk-block-secondary
+  padding: 10px 0px
+
+.uk-placeholder
+  border: 3px dotted gray
 
 #upload-drop
+  margin-bottom: 40px
+  padding: 100px 0px
   i
     font-family: 'FontAwesome'
+
+@media screen and (max-height: 620px)
+  .footer
+    display: none
+
+@media screen and (min-height: 621px)
+  .footer
+    display: block
 
 .footer
   background: rgb(88, 88, 88)
@@ -122,7 +138,6 @@ nav
   width: 100%
 
 h1#page-title
-  margin-top: 30px
   border-bottom: 1px solid rgb(244, 244, 244)
   text-align: left
   color: white
