[edit] deviseのrotueを仮追加

--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -6,6 +6,6 @@
       .uk-width-large-1-2.center
         = image_tag('logo.png')
       .uk-width-large-1-2
-      .uk-width-large-1-2 align="center" = link_to 'Sign up', '#', class: 'uk-button-primary uk-button-large'
+      .uk-width-large-1-2 align="center" = link_to 'Sign up', '/users/sign_up', class: 'uk-button-primary uk-button-large'
       .uk-width-large-1-2
-      .uk-width-large-1-2 align="center" = link_to 'Sign in', '#', class: 'uk-button uk-button-large'
+      .uk-width-large-1-2 align="center" = link_to 'Sign in', '/users/sign_in', class: 'uk-button uk-button-large'
