--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,6 +16,7 @@ body
     .uk-container.uk-container-center
       = link_to root_path, class: 'uk-navbar-brand'
         span.brand.bold DarkNess
+        = fa_icon 'fire'
 
       ul.uk-navbar-nav.uk-hidden-small
         li.normal-nav
