--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,37 +1,38 @@
-h2
-  | Edit 
-  = resource_name.to_s.humanize
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    div
-      | Currently waiting confirmation for: 
-      = resource.unconfirmed_email
-  .field
-    = f.label :password
-    i
-      | (leave blank if you don't want to change it)
-    br
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    i
-      | (we need your current password to confirm your changes)
-    br
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-h3
-  | Cancel my account
-p
-  | Unhappy? 
-  = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-= link_to "Back", :back
+- @title = '編集'
+
+.uk-width-medium-1-2.uk-container-center
+  .uk-panel.uk-panel-box
+    .uk-panel-title.bold
+      = fa_icon 'sign-in', text: @title
+
+    .uk-nav-side
+      .uk-nav-divider
+
+    = form_for resource, as: resource_name, html: { class: 'uk-form uk-form-stacked' }, url: registration_path(resource_name) do |f|
+      = devise_error_messages!
+      .uk-form-row
+        .uk-form-icon
+          i.uk-icon-envelope
+          = f.text_field :email, autofocus: true, placeholder: 'メールアドレス', style: 'padding-left: 30px;'
+        .uk-form-help-block#user-email-error
+      .uk-form-row
+        .uk-form-icon
+          i.uk-icon-key
+          = f.password_field :current_password, autocomplete: 'off', placeholder: 'current password', style: 'padding-left: 30px;'
+        .uk-form-help-block#user-password-error
+      .uk-form-row
+        .uk-form-icon
+          i.uk-icon-key
+          = f.password_field :password, autocomplete: 'off', placeholder: 'new password', style: 'padding-left: 30px;'
+        .uk-form-help-block#user-password-error
+      .uk-form-row
+        .uk-form-icon
+          i.uk-icon-key
+          = f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'new password(retype)', style: 'padding-left: 30px;'
+        .uk-form-help-block#user-password-confirmation-error
+      .uk-form-row
+        .uk-button-group
+          button.uk-button.uk-button-primary type="submit"
+            = fa_icon 'refresh', text: '更新'
+          = link_to registration_path(resource_name), class: 'uk-button uk-button-danger', data: { confirm: '本当に削除してよろしいですか？' }, method: :delete
+            = fa_icon 'trash', text: '削除'
