[edit] sessions/new テスト

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -48,7 +48,7 @@ body
           ul.uk-navbar-nav
             li
               = link_to new_user_session_path
-                = fa_icon 'sign-in', text: 'Sign In'
+                = fa_icon 'sign-in', text: 'Sign in'
 
   == yield
 
