[edit] fileのuploadの形式を変更

--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -48,10 +48,8 @@ mark
   font-family: monospace
   color: #999
 
-
 .placeholder
   color: #999 !important
-
 
 .uk-modal-dialog
   min-height: 0
@@ -60,10 +58,8 @@ mark
   max-height: 500px
   overflow: auto
 
-
 .uk-placeholder
   padding: 8px 6px
-
 
 .uk-thumbnav
   .uk-thumbnail
@@ -84,12 +80,14 @@ html, body
   .uk-container
     box-sizing: border-box
     width: 100%
+  .logo
+    top: 50%
+    left: 50%
     img
-      width: 400px
-      height: 165px
       display: block
       margin-left: auto
       margin-right: auto
+      margin-bottom: 40px
 
 nav
   margin-bottom: 20px
