--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -14,6 +14,7 @@
         .uk-form-icon
           i.uk-icon-envelope
           = f.text_field :email, autofocus: true, placeholder: 'メールアドレス', style: 'padding-left: 30px;'
+        .uk-form-help-block#user-email-error
       .uk-form-row
         .uk-form-icon
           i.uk-icon-key
