--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,13 +1,14 @@
 - @title = 'TOP'
 .uk-block.uk-block-secondary.uk-contrast.uk-block-large.top
+  .logo
+    = image_tag('logo.png')
   .uk-container
     .uk-grid.uk-grid-match.center data-uk-grid-margin=""
-      .uk-width-large-1-2.center
-      .uk-width-large-1-2.center
-        = image_tag('logo.png')
       - unless user_signed_in?
-        .uk-width-large-1-2
-        .uk-width-large-1-2 align="center" = link_to 'Sign up', edit_user_registration_path, class: 'uk-button uk-button-primary uk-button-large'
-        .uk-width-large-1-2
-        .uk-width-large-1-2 align="center" = link_to 'Sign in', new_user_session_path, class: 'uk-button uk-button-large'
+        .uk-width-large-1-3
+        .uk-width-large-1-3 align="center" = link_to 'Sign up', new_user_registration_path, class: 'uk-button uk-button-primary uk-button-large'
+        .uk-width-large-1-3
+        .uk-width-large-1-3
+        .uk-width-large-1-3 align="center" = link_to 'Sign in', new_user_session_path, class: 'uk-button uk-button-large'
+        .uk-width-large-1-3
       - else
