--- a/app/views/albums/new.html.slim
+++ b/app/views/albums/new.html.slim
@@ -33,17 +33,17 @@ javascript:
         allow : '*.zip',
 
         loadstart: function() {
-          bar.css("width", "0%").text("0%");
+          bar.css("width", "0%").text("");
             progressbar.removeClass("uk-hidden");
         },
 
         progress: function(percent) {
           percent = Math.ceil(percent);
-            bar.css("width", percent+"%").text(percent+"%");
+            bar.css("width", percent+"%").text("");
         },
 
         allcomplete: function(response) {
-          bar.css("width", "100%").text("100%");
+          bar.css("width", "100%").text("");
           setTimeout(function(){
             progressbar.addClass("uk-hidden");
           }, 2000);
