--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -74,6 +74,7 @@ mark
 html, body
   background: rgb(34, 34, 34)
   color: rgb(255, 255, 255)
+  width: 100%
   height: 100%
   display: block
   min-width: 480px
