[add] albums#show 実装

--- a/app/views/albums/list.html.slim
+++ b/app/views/albums/list.html.slim
@@ -4,5 +4,5 @@
     .uk-width-large-1-3
     .uk-width-large-2-3
       - @albums.each do |album|
-        .panel
-          = album.to_s
+        .uk-panel
+
