--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -61,7 +61,7 @@ mark
 .uk-placeholder
   padding: 8px 6px
 
-.uk-thumbnav
+.uk-thumbnav 
   .uk-thumbnail
     width: 100%
 
@@ -99,6 +99,23 @@ nav
       border-left: 1px solid gray
       &.last-child
         border-right: 1px solid gray
+
+.uk-panel-box.album
+  background: rgb(250, 250, 250)
+  margin: 10px
+  padding: 20px
+  .uk-badge
+    padding: 5px
+    a
+      margin: 0px 15px
+      color: white
+      font-size: 20px
+  .page
+    float: right
+    margin: 0px
+  .date
+    float: right
+    margin: 0px
 
 .uk-block.uk-block-secondary
   padding: 10px 0px
