[add] 画像を閲覧できるように

--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -75,7 +75,6 @@ html, body
   background: rgb(34, 34, 34)
   color: rgb(255, 255, 255)
   width: 100%
-  height: 100%
   display: block
   min-width: 480px
   .uk-container
@@ -117,6 +116,9 @@ nav
     float: right
     margin: 0px
 
+img.photos
+  width: 600px
+
 .uk-block.uk-block-secondary
   padding: 10px 0px
 
@@ -135,11 +137,11 @@ nav
 
 @media screen and (min-height: 621px)
   .footer
-    display: block
+    display: none
 
 .footer
   background: rgb(88, 88, 88)
-  height: 18%
+  height: 150px
   position: absolute
   width: 100%
   min-height: 150px
