--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,7 +27,7 @@ body
             = link_to '#'
               = fa_icon 'smile-o', text: 'Events'
           li.normal-nav.last-child
-            = link_to '#'
+            = link_to '/albums'
               = fa_icon 'book', text: 'Albums'
       - if user_signed_in?
         .uk-navbar-flip
