[modify] page_numがnilのとき 0, img_pathはモデルでつくる

--- a/app/views/albums/list.html.slim
+++ b/app/views/albums/list.html.slim
@@ -8,6 +8,7 @@
           .uk-panel-box.album
             .uk-badge
               = link_to album.title, album_path(album.id)
-            .page = '全' +  album.page_num.to_s + 'ページ'
+            - num = album.page_num.nil? ? '0' : album.page_num.to_s
+            .page = '全' + num + 'ページ'
             .date = album.updated_at.strftime('%Y年 %m月 %d日 %X')
 
