[modify] footer を正しい場所に表示できるように

--- a/app/views/albums/show.html.slim
+++ b/app/views/albums/show.html.slim
@@ -1,4 +1,5 @@
 - @title = @album.title
-- @photos.each do |photo|
-  .center
-    img.photos src="#{photo.img_path}"
+.uk-container
+  - @photos.each do |photo|
+    .center
+      img.photos src="#{photo.img_path}"
