--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -61,7 +61,7 @@ mark
 .uk-placeholder
   padding: 8px 6px
 
-.uk-thumbnav 
+.uk-thumbnav
   .uk-thumbnail
     width: 100%
 
@@ -75,11 +75,18 @@ html, body
   background: rgb(34, 34, 34)
   color: rgb(255, 255, 255)
   width: 100%
+  height: 100%
+  margin: 0
   display: block
   min-width: 480px
+  #container
+    height: auto !important
+    height: 100%
+    min-height: 100%
+    position: relative
   .uk-container
-    box-sizing: border-box
     width: 100%
+    box-sizing: border-box
   .logo
     top: 50%
     left: 50%
@@ -137,15 +144,15 @@ img.photos
 
 @media screen and (min-height: 621px)
   .footer
-    display: none
+    display: block
 
 .footer
   background: rgb(88, 88, 88)
+  bottom: -150px
   height: 150px
   position: absolute
   width: 100%
   min-height: 150px
-  top: 82%
   .uk-container
     margin-top: 30px
     font-size: 14px
