[modify] デザインの変更

--- a/app/views/albums/show.html.slim
+++ b/app/views/albums/show.html.slim
@@ -1,5 +1,5 @@
 - @title = @album.title
-.uk-container
+.uk-container.uk-container-center
   - @photos.each do |photo|
     .center
       img.photos src="#{photo.img_path}"
