--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -106,22 +106,40 @@ nav
       &.last-child
         border-right: 1px solid gray
 
+.uk-width-large-1-1
+  width: 100%
+
 .uk-panel-box.album
   background: rgb(250, 250, 250)
   margin: 10px
-  padding: 20px
+  padding: 15px
+  padding-bottom: 30px
+  min-width: 400px
+  height: 80px
   .uk-badge
-    padding: 5px
+    padding: 3px
     a
       margin: 0px 15px
       color: white
-      font-size: 20px
+      font-size: 15px
   .page
     float: right
     margin: 0px
+    margin-top: 3px
+    margin-right: 5px
   .date
     float: right
     margin: 0px
+    margin-top: 3px
+    margin-right: 5px
+  .uk-button-group
+    float: left
+    margin-right: 15px
+    margin-top: 3px
+    button.uk-button-mini
+      width: 60px
+      border: none
+      float: right
 
 img.photos
   width: 600px
