--- a/app/views/albums/list.html.slim
+++ b/app/views/albums/list.html.slim
@@ -1,14 +1,22 @@
 - @title = 'Albums'
-.uk-container
+.uk-container.uk-container-center
   .uk-grid.uk-grid-match data-uk-grid-margin=""
+    .uk-width-large-1-1
+      h1.left#page-title = 'Albums'
     .uk-width-large-1-3
-    .uk-width-large-2-3
-      .uk-width-medium-1-1
-        - @albums.each_with_index do |album, count|
-          .uk-panel-box.album
-            .uk-badge
-              = link_to album.title, album_path(album.id)
-            - num = album.page_num.nil? ? '0' : album.page_num.to_s
-            .page = '全' + num + 'ページ'
-            .date = album.updated_at.strftime('%Y年 %m月 %d日 %X')
-
+    - @albums.each_with_index do |album, count|
+      - if count % 2 == 0
+        .uk-width-large-2-3
+      .uk-width-medium-1-2
+        .uk-panel-box.album
+          .uk-badge
+            = link_to album.title, album_path(album.id)
+          - num = album.page_num.nil? ? '0' : album.page_num.to_s
+          .date = album.updated_at.strftime('%Y年%m月%d日 %X')
+          br
+          .page = '全' + num + 'ページ'
+          .uk-button-group
+            button.uk-button-mini.uk-button-danger
+              = 'delete'
+            button.uk-button-mini.uk-button-success
+              = 'edit'
