--- a/app/views/dashboard/index.html.slim
+++ b/app/views/dashboard/index.html.slim
@@ -1,14 +1,11 @@
 - @title = 'TOP'
 .uk-block.uk-block-secondary.uk-contrast.uk-block-large.top
-  .uk-container
+  .uk-container.uk-container-center
     .uk-grid.uk-grid-match.center data-uk-grid-margin=""
-      .uk-width-large-1-6
-      .uk-width-large-5-6
+      .uk-width-large-1-1
         .logo
           = image_tag('logo.png')
       - unless user_signed_in?
-        .uk-width-large-1-6
-        .uk-width-large-5-6 align="center" = link_to 'Sign up', new_user_registration_path, class: 'uk-button uk-button-primary uk-button-large'
-        .uk-width-large-1-6
-        .uk-width-large-5-6 align="center" = link_to 'Sign in', new_user_session_path, class: 'uk-button uk-button-large'
+        .uk-width-large-1-1 = link_to 'Sign up', new_user_registration_path, class: 'uk-button uk-button-primary uk-button-large'
+        .uk-width-large-1-1 = link_to 'Sign in', new_user_session_path, class: 'uk-button uk-button-large'
       - else
