[add] albums#list に prefixをつける

--- a/app/views/albums/new.html.slim
+++ b/app/views/albums/new.html.slim
@@ -26,7 +26,7 @@ javascript:
       bar         = progressbar.find('.uk-progress-bar'),
       settings    = {
 
-        action: '#{albums_path}',
+        action: '#{album_list_path}',
         allow : '*.zip',
 
         loadstart: function() {
