[modify] buttonのデザイン調整

--- a/app/assets/stylesheets/darkness.sass
+++ b/app/assets/stylesheets/darkness.sass
@@ -118,6 +118,7 @@ nav
   height: 80px
   .uk-badge
     padding: 3px
+    width: 320px
     a
       margin: 0px 15px
       color: white
@@ -136,8 +137,8 @@ nav
     float: left
     margin-right: 15px
     margin-top: 3px
-    button.uk-button-mini
-      width: 60px
+    .uk-button-mini
+      width: 40px
       border: none
       float: right
 
