--- a/app/views/kaminari/_next_page.html.slim
+++ b/app/views/kaminari/_next_page.html.slim
@@ -5,7 +5,4 @@
     total_pages  : total number of pages
     per_page     : number of items to fetch per page
     remote       : data-remote
-== link_to_unless current_page.first?, t('views.pagination.next').html_safe, url, :rel => 'next', :remote => remote, class: 'uk-slidenav uk-slidenav-contrast uk-slidenav-next',  'data-uk-slideshow-item' => 'next'
-'
-coffee:
-  $('.uk-slidenav-next').text('')
+== link_to_unless current_page.last?, t('views.pagination.next').html_safe, url, :rel => 'next', :remote => remote, class: 'uk-slidenav uk-slidenav-contrast uk-slidenav-next',  'data-uk-slideshow-item' => 'next'
